--- a/index.html
+++ b/index.html
@@ -13,19 +13,25 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
   <body>
-    <div class="header">
-      <header class="firstpart">
-        <h1 class="logo">Head.</h1>
-        <button class="reponsivenav" id="menu">&#9776</button>
-        <nav class="linkbuttons">
-          <ul>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">Service</a></li>
-            <li><a href="#">Contacts</a></li>
-          </ul>
-        </nav>
+    <div>
+      <header class="logo">
+        <h1>Head.</h1>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <label for="menu-toggle" class="icon">
+          <i class="fa fa-bars"></i>
+        </label>
+
+        <ul class="linkbuttons">
+          <li><a href="#">Works</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">Contacts</a></li>
+        </ul>
       </header>
       <section class="secondpart">
         <div class="text">
@@ -37,8 +43,18 @@
         </div>
       </section>
     </div>
-    <div>
-      <img class="image" src="image/Slider.jpg" alt="PersonPhoto" />
-    </div>
+    <picture>
+      <source
+        srcset="image/smallone.png"
+        media="(max-width: 200px)"
+        alt="Man face"
+      />
+      <source
+        srcset="image/secongbig.png"
+        media="(max-width: 1200px)"
+        alt="Man face"
+      />
+      <img src="image/bigone.jpg" alt="Man face" />
+    </picture>
   </body>
 </html>
